src/test/ui/rfc-2457/no_mangle_nonascii_forbidden.rs
#![feature(non_ascii_idents)]

#[no_mangle]
pub fn řųśť() {}  //~ `#[no_mangle]` requires ASCII identifier

fn main() {}
